# make-svg-bigger

./: .gitignore  README.md  big_svg.py  pyproject.toml
